testsuite/poke.pkl/neg-f64-diag-3.pk
/* { dg-do compile } */

var res
  = .- (0 as uint<52>); /* { dg-error "invalid operand .*" } */
